Fix text-align on small display

--- a/_sass/general.scss
+++ b/_sass/general.scss
@@ -81,20 +81,6 @@ body {
     float: right;
 }
 
-@media (max-width: 600px) {
-    .profile-pic {
-        display: none;
-    }
-
-    .headbar {
-        flex-direction: column;
-    }
-
-    .headbar > nav {
-        margin-top: 10px;
-    }
-}
-
 main {
     padding: 10px;
     text-align: justify;
@@ -129,4 +115,22 @@ main > h2 {
     font-size: 21px;
     margin-bottom: 10px;
     margin-top: 15px;
+}
+
+@media (max-width: 600px) {
+    .profile-pic {
+        display: none;
+    }
+
+    .headbar {
+        flex-direction: column;
+    }
+
+    .headbar > nav {
+        margin-top: 10px;
+    }
+
+    main {
+        text-align: left;
+    }
 }
